# narrow-model-safety-eval

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SAFETY.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  responsible_use_concern.yml
.github/workflows/: ci.yml
dashboard/: app.py
data/annotations/: functional_sites.json  physical_realizability.json
data/sequences/: benign_homologs.fasta  metadata.json  toxins_positive.fasta
docs/: ARCHITECTURE.md  DATA_CORRECTIONS.md  EVALUATION_REPORT.md  FSI_NUMBERING_AUDIT.md  PUBLISHING_CHECKLIST.md  RELEASE_SURFACE.md  SYSTEM_CARD.md
huggingface/: README.md
research/: 00_research_summary.md  01_esm2_dual_use_safety_research.md  02_biosecurity_ai_policy_research.md  03_fspe_fsi_metric_novelty_research.md  04_proteinmpnn_technical_details.md  05_v2_related_work_survey.md
results/: embedding_ids.json  esm3_fspe_results.json  esm3_separability_results.json  esmfold_validation.json  evaluation_report.json  evaluation_report.txt  fhs_results.json  fsi_aggregate_results.json  fsi_controls.json  fsi_evodiff_results.json  fsi_ligandmpnn_results.json  fsi_results.json  fsi_temperature_sensitivity.json  fspe_results.json  mdrp_risk_table.json  nearest_neighbor_results.json  separability_results.json  ser_results.json  summary_risk_table.csv
results/proteinmpnn_output/1ABR/seqs/: 1ABR.fa
results/proteinmpnn_output/1ACC/seqs/: 1ACC.fa
results/proteinmpnn_output/1XTC/seqs/: 1XTC.fa
results/proteinmpnn_output/1Z7H/seqs/: 1Z7H.fa
results/proteinmpnn_output/2AAI/seqs/: 2AAI.fa
results/proteinmpnn_output/3BTA/seqs/: 3BTA.fa
results/proteinmpnn_output/3SEB/seqs/: 3SEB.fa
results/proteinmpnn_output/4HSC/seqs/: 4HSC.fa
results/proteinmpnn_output/controls/1AST/seqs/: 1AST.fa
results/proteinmpnn_output/controls/1LNF/seqs/: 1LNF.fa
results/proteinmpnn_output/controls/1LYZ/seqs/: 1LYZ.fa
results/proteinmpnn_output/controls/1QD2/seqs/: 1QD2.fa
results/proteinmpnn_temp_sweep/2AAI/T0.050/seqs/: 2AAI.fa
results/proteinmpnn_temp_sweep/2AAI/T0.100/seqs/: 2AAI.fa
results/proteinmpnn_temp_sweep/2AAI/T0.200/seqs/: 2AAI.fa
results/proteinmpnn_temp_sweep/2AAI/T0.300/seqs/: 2AAI.fa
results/proteinmpnn_temp_sweep/3BTA/T0.050/seqs/: 3BTA.fa
results/proteinmpnn_temp_sweep/3BTA/T0.100/seqs/: 3BTA.fa
results/proteinmpnn_temp_sweep/3BTA/T0.200/seqs/: 3BTA.fa
results/proteinmpnn_temp_sweep/3BTA/T0.300/seqs/: 3BTA.fa
slurm/: cpu_analyses.sh  download_structures.sh  esm2_embed.sh  esm2_masked.sh  esm3_embed.sh  esm3_foldseek_preprocess.sh  esmfold_validation.sh  eval_report.sh  evodiff.sh  fsi_analysis.sh  fsi_temperature_sensitivity.sh  ligandmpnn.sh  negative_controls.sh  proteinmpnn.sh  run_all.sh  run_improvements.sh  sae_fhs.sh  screening_evasion.sh  setup_env.sh  stepping_stone.sh
src/: 01_collect_data.py  02_esm2_embed.py  03_esm2_separability.py  04_esm2_masked_prediction.py  05_esm2_nearest_neighbor.py  06_proteinmpnn_redesign.py  07_fsi_analysis.py  08_evaluation_report.py  09_negative_controls.py  10_fsi_temperature_sensitivity.py  11_esmfold_validation.py  12_ligandmpnn_fsi.py  13_evodiff_fsi.py  14_esm3_separability_fspe.py  15_sae_fhs.py  16_screening_evasion.py  17_stepping_stone.py  18_realizability_automation.py  19_risk_table.py  utils.py
tests/: test_release_integrity.py  test_utils.py
