[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "narrow-model-safety-eval"
version = "2.0.0"
description = "Safety evaluation framework for narrow scientific AI models (ESM-2, ProteinMPNN)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jaewon Jang" }]
keywords = ["ai-safety", "protein-language-model", "biosecurity", "dual-use", "ESM-2", "ProteinMPNN"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "fair-esm>=2.0.0",
    "biopython>=1.81",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "prody>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.urls]
Homepage = "https://github.com/jang1563/narrow-model-safety-eval"
Repository = "https://github.com/jang1563/narrow-model-safety-eval"
"Bug Tracker" = "https://github.com/jang1563/narrow-model-safety-eval/issues"
Dataset = "https://huggingface.co/datasets/jang1563/narrow-model-safety-eval"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
