[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narrow-model-safety-eval"
version = "2.0.0"
description = "Safety evaluation framework for narrow scientific AI models (ESM-2, ProteinMPNN)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "JangKeun Kim", email = "jak4013@med.cornell.edu" }]
keywords = ["ai-safety", "protein-language-model", "biosecurity", "dual-use", "ESM-2", "ProteinMPNN"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "fair-esm>=2.0.0",
    "biopython>=1.81",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "prody>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    # Capped below the next ruff minor: new minors can add/stabilize lint rules
    # and would otherwise break CI on unrelated PRs. Keep in sync with the
    # pinned ruff in .github/workflows/ci.yml.
    "ruff>=0.15,<0.16",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.urls]
Homepage = "https://github.com/jang1563/narrow-model-safety-eval"
Repository = "https://github.com/jang1563/narrow-model-safety-eval"
"Bug Tracker" = "https://github.com/jang1563/narrow-model-safety-eval/issues"
Dataset = "https://huggingface.co/datasets/jang1563/narrow-model-safety-eval"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
